try to fix the extra space in the page

--- a/CSS/Home.css
+++ b/CSS/Home.css
@@ -1,11 +1,7 @@
-
-/*NAVBAR SECTION */
-
-
-
 /*---------------------------------------------
                     Home
 ---------------------------------------------*/
+
 /*MAP SECTION*/
 .map-container{
   overflow:hidden;
@@ -21,23 +17,10 @@
   position:absolute;
 }
 
-/* Will DELETE THIS*/
-.col-3 {
-    background-image:url(./img/1.jpg);
-}
-
-.text {
-    text-align: center;
-}
-
-.custom-dropdown-item {
-  background-color: #FAF1E4 !important; /* Use !important to ensure the custom color is applied */
-}
-
 /*---------------------------------------------
                     Contact Me
 ---------------------------------------------*/
-/*IMAGE ANDFORM SECTION*
+
 
 /*---------------------------------------------
                       MEDIA
